--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ ENV/
 env.bak/
 venv.bak/
 .idea/
+dist
 
 # Spyder project settings
 .spyderproject
@@ -31,5 +32,5 @@ venv.bak/
 build/
 data/
 src/.DS_Store
-src/ukg_connector.egg-info/
+*.egg-info/
 app.log
