--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = gbq_connector
-version = 0.1.0
+version = 1.0.0
 description = A wrapper for common Google Biq Query Operations
 author = Mark Young
 license = MIT
@@ -15,6 +15,12 @@ packages =
 python_requires = >=3.10
 package_dir =
     =src
+install_requires =
+    google-cloud-bigquery
+    pyarrow
+    google-auth
+    pandas
+    db-dtypes
 zip_safe = False
 
 [options.extras_require]
@@ -22,7 +28,6 @@ testing =
     tox >= 4.0
     pytest >= 7.0
     pytest-cov >= 4.0
-    requests>=2.0
 
 [options.package_data]
 job_notifications = py.typed
