Added Google Cloud Storage package

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ pandas-gbq = "*"
 google-auth = "*"
 pandas = "*"
 gbq-connector = {file = ".", editable = true}
+google-cloud-storage = "*"
 
 [dev-packages]
 pytest = "*"
