--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ package_dir =
     =src
 install_requires =
     google-cloud-bigquery
+    google-cloud-storage
     pyarrow
     google-auth
     pandas
