--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ classifiers =
 [options]
 packages =
     gbq_connector
-python_requires = >=3.09
+python_requires = >=3.9
 package_dir =
     =src
 install_requires =
@@ -22,6 +22,8 @@ install_requires =
     google-auth
     pandas
     db-dtypes
+    requests
+    pytz
 zip_safe = False
 
 [options.extras_require]
