--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = gbq_connector
-version = 3.1.0
+version = 3.2.0
 description = A wrapper for common Google Biq Query Operations
 author = Mark Young
 license = MIT
@@ -33,4 +33,4 @@ testing =
     pytest-cov >= 4.0
 
 [options.package_data]
-job_notifications = py.typed
+gbq_connector = py.typed
